--- a/Youtube-Clone/index.html
+++ b/Youtube-Clone/index.html
@@ -63,19 +63,23 @@
     <!-- _________________ Side Bar _________________ -->
     <div class="sidebar">
       <div class="shortcut-links">
-        <a href="index.html"
-          ><img src="images/home.png" alt="" />
-          <p>Home</p>
-        </a>
+        <div >
+          <a  href="index.html"
+            ><img src="images/home.png" alt="" />
+            <p >Home</p>
+          </a>
+        </div>
 
         <a href=""
           ><img src="images/shorts.png" alt="" />
           <p>Shorts</p>
         </a>
-        <a href=""
-          ><img src="images/subscription.png" alt="" />
-          <p>Subscription</p>
-        </a>
+        <div class = "selectBar">
+          <a href=""
+            ><img src="images/subscription.png" alt="" />
+            <p>Subscription</p>
+          </a>
+        </div>
         <hr />
         <br />
         <a href=""
